remove unused getDefaultStepId method from the AlignmentPipelineStep interface and add javadoc comment with reference information to each pipeline step implementation to document the mapping instead