@@ -5,7 +5,6 @@ import com.beust.jcommander.ParametersDelegate;
 import java.io.IOException;
 import java.io.Serializable;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.spark.SparkConf;
 import org.apache.spark.api.java.JavaRDD;
@@ -21,7 +20,6 @@ import org.janelia.render.client.parameter.MipmapParameters;
 import org.janelia.render.client.parameter.MultiProjectParameters;
 import org.janelia.render.client.parameter.RenderWebServiceParameters;
 import org.janelia.render.client.spark.pipeline.AlignmentPipelineStep;
-import org.janelia.render.client.spark.pipeline.AlignmentPipelineStepId;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -78,7 +76,7 @@ public class MipmapClient
                                                                   pipelineParameters.getMipmap());
     }
 
-    /** Run the client as part of an alignment pipeline. */
+    /** Runs the {@link org.janelia.render.client.spark.pipeline.AlignmentPipelineStepId#GENERATE_MIPMAPS GENERATE_MIPMAPS} step. */
     public void runPipelineStep(final JavaSparkContext sparkContext,
                                 final AlignmentPipelineParameters pipelineParameters)
             throws IllegalArgumentException, IOException {
@@ -95,11 +93,6 @@ public class MipmapClient
     }
 
     /** Run the client with the specified spark context and parameters. */
-    @Override
-    public AlignmentPipelineStepId getDefaultStepId() {
-        return AlignmentPipelineStepId.GENERATE_MIPMAPS;
-    }
-
     private void generateMipmaps(final JavaSparkContext sparkContext,
                                  final Parameters clientParameters)
             throws IOException {
@@ -138,7 +131,7 @@ public class MipmapClient
         final List<StackId> distinctStackIds = batchedList.stream()
                 .map(StackWithZValues::getStackId)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
         for (final StackId stackId : distinctStackIds) {
             mc.updateMipmapPathBuilderForStack(stackId);
         }
